# Autonomy-2017

./: .gitignore  .gitmodules  README.md  astro-vision-slave  astro-vision-slave.service  astro-vision-slave.sh
ros_code/devel/: .catkin  .rosinstall  setup.sh
ros_code/src/grid/: .grid.cpp.swp  CMakeLists.txt  grid.cpp
ros_code/src/publisher/: CMakeLists.txt  main.cpp  package.xml  pub  pub_node
ros_code/src/test/: CMakeLists.txt  hello.cpp  package.xml
src/FieldMapping/: AutonomyMap.h  CMakeLists.txt  Map.cpp  Map.h  Move.cpp  Move.h  Path.cpp  Path.h  PathFinder.cpp  PathFinder.h  Robot.cpp  Robot.h
src/autonomous_control/: CMakeLists.txt  package.xml
src/autonomous_control/launch/: arduino.launch  autonomous.launch  autonomous.launch.save  detect.launch  detect_arduino.launch  detect_arduino_image.launch  detect_rowens.launch  example_publish.launch  imu_launch.launch  turtle_test.launch
src/autonomous_control/src/: .autonomous_control.cpp.swp  autonomous_control.cpp  autonomous_control.cpp.save  autonomous_control_node.cpp  test_publish.cpp
src/cam_data_filter/: CMakeLists.txt  package.xml
src/cam_data_filter/src/: cam_data_filter.cpp  cam_data_filter.cpp.save  cam_data_filter_node.cpp
src/lidar_receive/: CMakeLists.txt  package.xml
src/lidar_receive/include/: README.md  arduino_interface.c  arduino_interface.h  arduino_interface_uart.c  bldc.cpp  crc.c  (+20 more)
src/line_stripe/: CMakeLists.txt  package.xml
src/obstacle_testing/: CMakeLists.txt  package.xml
src/quat2euler/: CMakeLists.txt  package.xml
src/rowens_driver/: CMakeLists.txt  package.xml
(+52 files in other folders)
